@@ -6,6 +6,7 @@ Version 0.2.2 (...)
 - Unicode-related changes to permit sqlcmd to handle databases with
   non-ASCII characters. Thanks to Stephane Matamontero (sm /at/ campoint.net)
   for noting the problem and submitting a patch.
+- Fixed a problem with history management and multiline commands.
 
 ---------------------------------------------------------------------------
 Version 0.2.1 (18 July, 2008)
